fix(hero): prevent overflow

--- a/_sass/components/homepage/_hero.scss
+++ b/_sass/components/homepage/_hero.scss
@@ -17,3 +17,12 @@
     padding: 3rem;
   }
 }
+
+// NOTE: This is to keep the infobox from exceeding
+// the width of the nav-bar.
+// Hence, any changes here or on nav-bar should be
+// duplicated to the other.
+.infobox-container {
+  max-width: $container-max-width;
+  margin: 0 auto;
+}
